feat: added PUT endpoint for pipeline
