# docs/swagger.json
@@ -93,75 +93,6 @@
                 }
             }
         },
-        "/api/{organization}/{project}/pipelines/": {
-            "post": {
-                "description": "Create a new Pipeline",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Create a new Pipeline",
-                "operationId": "post-pipeline",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Organization name",
-                        "name": "organization",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Project ID or name",
-                        "name": "projectId",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "API version (e.g., 7.2-preview.1)",
-                        "name": "api-version",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Basic Auth header (Basic \u003cbase64-encoded-username:password\u003e)",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "Pipeline creation request body",
-                        "name": "pipelineCreate",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/pipeline.CreatePipelineRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Pipeline details",
-                        "schema": {
-                            "$ref": "#/definitions/pipeline.CreatePipelineResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
-                    "500": {
-                        "description": "Internal Server Error"
-                    }
-                }
-            }
-        },
         "/api/{organization}/{project}/pipelines/pipelinepermissions/{resourceType}/{resourceId}": {
             "get": {
                 "description": "Get",
@@ -317,13 +248,6 @@
                         "description": "Pipeline ID",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "API version (e.g., 7.2-preview.1)",
-                        "name": "api-version",
-                        "in": "query",
                         "required": true
                     },
                     {
@@ -645,90 +569,6 @@
                 }
             }
         },
-        "pipeline.Build": {
-            "type": "object",
-            "properties": {
-                "buildNumber": {
-                    "type": "string"
-                },
-                "finishTime": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "queueTime": {
-                    "type": "string"
-                },
-                "result": {
-                    "type": "string"
-                },
-                "startTime": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "uri": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.BuildDefinitionReference": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "project": {
-                    "$ref": "#/definitions/pipeline.ProjectReference"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "uri": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.BuildDefinitionVariable": {
-            "type": "object",
-            "properties": {
-                "allowOverride": {
-                    "type": "boolean"
-                },
-                "isSecret": {
-                    "type": "boolean"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.BuildMetric": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string"
-                },
-                "scope": {
-                    "type": "string"
-                },
-                "value": {}
-            }
-        },
         "pipeline.BuildRepository": {
             "type": "object",
             "properties": {
@@ -738,73 +578,6 @@
                 },
                 "type": {
                     "description": "Required - enum: unknown, gitHub, azureReposGit, azureReposGitHyphenated",
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.CreatePipelineConfigurationParametersComplete": {
-            "type": "object",
-            "properties": {
-                "path": {
-                    "type": "string"
-                },
-                "repository": {
-                    "description": "Required",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/pipeline.BuildRepository"
-                        }
-                    ]
-                },
-                "type": {
-                    "description": "Required - enum: unknown, yaml, designerJson, justInTime, designerHyphenJson",
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.CreatePipelineRequest": {
-            "type": "object",
-            "properties": {
-                "configuration": {
-                    "description": "Required",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/pipeline.CreatePipelineConfigurationParametersComplete"
-                        }
-                    ]
-                },
-                "folder": {
-                    "type": "string"
-                },
-                "name": {
-                    "description": "Required",
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.CreatePipelineResponse": {
-            "type": "object",
-            "properties": {
-                "_links": {
-                    "$ref": "#/definitions/pipeline.ReferenceLinks"
-                },
-                "configuration": {
-                    "$ref": "#/definitions/pipeline.PipelineConfiguration"
-                },
-                "folder": {
-                    "description": "Embedded fields from PipelineBase",
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "revision": {
-                    "type": "integer"
-                },
-                "url": {
                     "type": "string"
                 }
             }
@@ -839,78 +612,39 @@
         "pipeline.PipelineConfiguration": {
             "type": "object",
             "properties": {
+                "path": {
+                    "type": "string"
+                },
+                "repository": {
+                    "description": "Required",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pipeline.BuildRepository"
+                        }
+                    ]
+                },
                 "type": {
                     "description": "enum: unknown, yaml, designerJson, justInTime, designerHyphenJson",
                     "type": "string"
                 }
             }
         },
-        "pipeline.ProcessParameterInput": {
+        "pipeline.PipelineConfigurationParameters": {
             "type": "object",
             "properties": {
-                "defaultValue": {
+                "path": {
                     "type": "string"
                 },
-                "helpMarkDown": {
-                    "type": "string"
-                },
-                "label": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "properties": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "required": {
-                    "type": "boolean"
+                "repository": {
+                    "description": "Required",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/pipeline.BuildRepository"
+                        }
+                    ]
                 },
                 "type": {
-                    "type": "string"
-                },
-                "visibleRule": {
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.ProcessParameters": {
-            "type": "object",
-            "properties": {
-                "inputs": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pipeline.ProcessParameterInput"
-                    }
-                }
-            }
-        },
-        "pipeline.ProjectReference": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "lastUpdateTime": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "revision": {
-                    "type": "integer"
-                },
-                "state": {
-                    "type": "string"
-                },
-                "url": {
-                    "type": "string"
-                },
-                "visibility": {
+                    "description": "Required - enum: unknown, yaml, designerJson, justInTime, designerHyphenJson",
                     "type": "string"
                 }
             }
@@ -927,62 +661,21 @@
         "pipeline.UpdatePipelineRequest": {
             "type": "object",
             "properties": {
-                "badgeEnabled": {
-                    "type": "boolean"
+                "configuration": {
+                    "$ref": "#/definitions/pipeline.PipelineConfigurationParameters"
                 },
-                "buildNumberFormat": {
-                    "type": "string"
-                },
-                "comment": {
+                "folder": {
                     "type": "string"
                 },
                 "id": {
+                    "description": "maybe to be removed since RDC does not include it",
                     "type": "integer"
                 },
                 "name": {
-                    "description": "Required",
                     "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "process": {},
-                "processParameters": {
-                    "$ref": "#/definitions/pipeline.ProcessParameters"
-                },
-                "properties": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "quality": {
-                    "type": "string"
-                },
-                "repository": {
-                    "$ref": "#/definitions/pipeline.BuildRepository"
                 },
                 "revision": {
                     "type": "integer"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "type": {
-                    "type": "string"
-                },
-                "variableGroups": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pipeline.VariableGroup"
-                    }
-                },
-                "variables": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "$ref": "#/definitions/pipeline.BuildDefinitionVariable"
-                    }
                 }
             }
         },
@@ -992,146 +685,24 @@
                 "_links": {
                     "$ref": "#/definitions/pipeline.ReferenceLinks"
                 },
-                "badgeEnabled": {
-                    "type": "boolean"
+                "configuration": {
+                    "$ref": "#/definitions/pipeline.PipelineConfiguration"
                 },
-                "buildNumberFormat": {
-                    "type": "string"
-                },
-                "comment": {
-                    "type": "string"
-                },
-                "createdDate": {
-                    "type": "string"
-                },
-                "dateCreated": {
-                    "type": "string"
-                },
-                "draftOf": {
-                    "$ref": "#/definitions/pipeline.BuildDefinitionReference"
-                },
-                "drafts": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pipeline.BuildDefinitionReference"
-                    }
-                },
-                "dropLocation": {
+                "folder": {
+                    "description": "Embedded fields from PipelineBase",
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
-                "jobAuthorizationScope": {
-                    "type": "string"
-                },
-                "jobCancelTimeoutInMinutes": {
-                    "type": "integer"
-                },
-                "jobTimeoutInMinutes": {
-                    "type": "integer"
-                },
-                "latestBuild": {
-                    "$ref": "#/definitions/pipeline.Build"
-                },
-                "latestCompletedBuild": {
-                    "$ref": "#/definitions/pipeline.Build"
-                },
-                "metrics": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pipeline.BuildMetric"
-                    }
-                },
                 "name": {
                     "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "process": {},
-                "processParameters": {
-                    "$ref": "#/definitions/pipeline.ProcessParameters"
-                },
-                "project": {
-                    "$ref": "#/definitions/pipeline.ProjectReference"
-                },
-                "properties": {
-                    "type": "object",
-                    "additionalProperties": true
-                },
-                "quality": {
-                    "type": "string"
-                },
-                "repository": {
-                    "$ref": "#/definitions/pipeline.BuildRepository"
                 },
                 "revision": {
                     "type": "integer"
                 },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "type": {
-                    "type": "string"
-                },
-                "uri": {
-                    "type": "string"
-                },
                 "url": {
                     "type": "string"
-                },
-                "variableGroups": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/pipeline.VariableGroup"
-                    }
-                },
-                "variables": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "$ref": "#/definitions/pipeline.BuildDefinitionVariable"
-                    }
-                }
-            }
-        },
-        "pipeline.Variable": {
-            "type": "object",
-            "properties": {
-                "allowOverride": {
-                    "type": "boolean"
-                },
-                "isSecret": {
-                    "type": "boolean"
-                },
-                "value": {
-                    "type": "string"
-                }
-            }
-        },
-        "pipeline.VariableGroup": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "type": {
-                    "type": "string"
-                },
-                "variables": {
-                    "type": "object",
-                    "additionalProperties": {
-                        "$ref": "#/definitions/pipeline.Variable"
-                    }
                 }
             }
         },
